# FluentYTDL

./: .gitattributes  .gitignore  ACADEMIC_HONESTY.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FluentYTDL.spec  LICENSE  RABBIT_NOTE.txt  README.md  SECURITY.md  TRADEMARK.md  VERSION  config.example.json  download_history.json  format_test.txt  format_utf8.txt  main.py  package.ps1  pyproject.toml  pyright_output.txt  pyright_tests_out.json  pyright_tests_out.txt  ruff_errors.json  ruff_errors.txt  verify_ffmpeg_fix.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-draft.yml  release-test.yml  release.yml  upload-test-tools.yml
assets/: README.md
dle_profile/: Functional SAN Data-wal  Local State  RevisitationBloomfilter
dle_profile/Ad Blocking/: blocklist
dle_profile/Default/: Bookmarks  BrowsingTopicsState  DIPS-wal  Favicons  History  Login Data  MediaDeviceSalts  Preferences  Secure Preferences  Web Data  load_statistics.db-shm  load_statistics.db-wal
dle_profile/Default/DawnGraphiteCache/: index
dle_profile/Default/DawnWebGPUCache/: index
dle_profile/Default/EntityExtraction/: domains_config.json
dle_profile/Default/Extension Rules/: LOG
dle_profile/Default/Extension Scripts/: LOG
dle_profile/Default/Extension State/: LOG
dle_profile/Default/GPUCache/: data_0  data_1  data_2  index
dle_profile/Default/Password_Diagnostics/: PMLog_13416242298437026
dle_profile/Default/Session Storage/: LOG
dle_profile/Default/Sessions/: Apps_13416242290047645
dle_profile/Default/Site Characteristics Database/: LOG
dle_profile/Default/WebStorage/: QuotaManager  QuotaManager-journal
dle_profile/Default/shared_proto_db/: LOG
dle_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  index
dle_profile/GraphiteDawnCache/: index
dle_profile/ShaderCache/: index
docs/: ADVANCED_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_EN.md  CODEBASE_SIZE_ANALYSIS.md  CONCURRENT_EVALUATION.md  DLE_INTEGRATION_DESIGN_CN.md  PROJECT_ARCHITECTURE.md  RULES.md  RULES_EN.md  VERSION_MANAGEMENT_QUICK_START.md  YTDLP_KNOWLEDGE.md  YTDLP_KNOWLEDGE_EN.md  admin_restart_implementation.md  cookie_qt_thread_fix.md  cookie_sentinel_user_guide.md  format_downgrade_fix.md  gpu_acceleration_analysis.md  release_automation.md  rookiepy_packaging_fix.md  windows_build.md
docs/archive/: ARCHITECTURE.md  CODEBASE_AUDIT_REPORT.md  DLE_INTEGRATION_DESIGN.md  DLE_INTEGRATION_DESIGN_CN.md  DLE_MODE_LOGIC_CN.md  DLE_MULTI_ACCOUNT_IMPLEMENTATION_PLAN_CN.md  DTO_REFACTOR_DESIGN.md  FAQ.md  FluentYTDL 进阶指南.md  NODE_DIAGNOSIS_DESIGN_CN.md  PLAYLIST_ARCHITECTURE.md  PLAYLIST_FLICKER_ANALYSIS.md  PLAYLIST_REFACTOR_DESIGN.md  PROJECT_ARCHITECTURE.md  README.md  UI_GUIDELINES.md  VERSION_MANAGEMENT.md  bot_detection_audit_report.md  cookie_error_handling_improvement.md  cookie_integration_fix.md  cookie_sentinel_implementation.md  cookie_sentinel_integration_checklist.md  download_state_management.md  fallback_mechanism_audit_2026-04-24.md  ffmpeg_update_loop_fix.md  pot_cookies_loading_fix.md  selftest_translator.md
docs/archive/manuals/: DEVELOPER_DOC.md
docs/manuals/: USER_MANUAL.md
githooks/: pre-commit  pre-commit-version-check
installer/: FluentYTDL.iss  license.txt
licenses/: FluentYTDL-LICENSE.txt  THIRD_PARTY_LICENSES.txt
rabbish/: count_script_references.ps1  do_move_scripts_to_rabbish.ps1  isolate_to_rabbish.ps1  move_build_and_venv_to_rabbish.ps1  move_build_to_rabbish.ps1  move_log.txt  move_old_package_to_rabbish.ps1  planned_moves_rabbish.txt  rabbish_isolate.ps1  rabbish_isolate_clean.ps1  rabbish_restore.ps1  temp_parse_scripts.ps1
rabbish/20251230_040001/: rabbish_isolate_clean.ps1
rabbish/20251230_040001/scripts/: last_build_dist.txt
rabbish/20251230_044128/: rabbish_restore.ps1
rabbish/20251230_051656/: rabbish_restore.ps1
rabbish/20251230_055250/: package.cmd  package.ps1  package_menu.ps1  package_zip.ps1  package_zip.py  rabbish_restore.ps1
scripts/: FluentYTDL.spec  __init__.py  archive_additional_helpers.ps1  build.ps1  build.py  build_dist.ps1  build_gui.cmd  build_gui.py  build_menu.ps1  build_windows.ps1  checksums.py  cleanup_dist.ps1  collect_licenses.py  copy_icon_to_logo.py  debug_runtime_check.py  debug_yt.py  fetch_tools.ps1  fetch_tools.py  generate_manifest.py  hook-rookiepy.py  install_githooks.ps1  install_icon.py  maintenance.py  package.cmd  package.ps1  package_v2.ps1  selftest_translator.py  sync_rules.py  updater.spec  verify_cookie_cleaner.py  version_manager.py
src/fluentytdl/: __init__.py
src/fluentytdl/auth/: __init__.py  auth_service.py  cookie_cleaner.py  cookie_manager.py  cookie_probe_throttle.py  cookie_sentinel.py  extension_gen.py  server.py
src/fluentytdl/channel/: __init__.py  archive_manager.py  channel_service.py
src/fluentytdl/core/: __init__.py  app_update_manager.py  archive_manager.py  aria2c_manager.py  audio_processor.py  auth_service.py  channel_service.py  component_update_manager.py  config_manager.py  controller.py  cookie_manager.py  cookie_sentinel.py  cookie_sync_manager.py  dependency_manager.py  disk_monitor.py  download_manager.py  environment_checker.py  hardware_manager.py  network_watchdog.py  pot_adapter.py  pot_manager.py  process_manager.py  resume_manager.py  section_download.py  segment_manager.py  segment_merger.py  subtitle_manager.py  task_persistence.py  task_queue.py  updater.py  vod_processor.py  workers.py  youtube_service.py  yt_dlp_cli.py
src/fluentytdl/download/: __init__.py  aria2c_manager.py  dispatcher.py  download_manager.py  executor.py  extract_manager.py  features.py  network_probe.py  output_parser.py  resume_manager.py  strategy.py  task_queue.py  workers.py
tests/: test_component_update_manager.py  test_dle_backend.py  test_error_parser.py  test_fake_download_warning.py  test_fake_low_quality.py  test_generate_manifest.py  test_smoke.py  test_updater.py
(+308 files in other folders)
