[project]
name = "FluentYTDL"
version = "2.0.3"
description = "Professional YouTube downloader (Stage 1: core architecture)"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp[default]>=2025.11.12",
  "requests>=2.32.0",
  "rookiepy>=0.5.6",
  "PySide6>=6.6.0",
  "PySide6-Fluent-Widgets>=1.5.0",
  "loguru>=0.7.0",
  "Pillow>=10.0",
  "markdown>=3.5",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = [
  "src/fluentytdl/utils/spatialmedia/**",
  ".venv/**",
  "build/**",
  "dist/**",
  "__pycache__/**",
  ".ruff_cache/**",
  ".pytest_cache/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/fluentytdl/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fluentytdl"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]
exclude = ["src/fluentytdl/utils/spatialmedia", "build/**"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
# Console/launcher entry (optional; used by installers or users)
fluentytdl = "fluentytdl.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.12",
  "pyright>=1.1",
  "pyinstaller>=5.9",
]
