[project]
name = "FluentYTDL"
version = "3.0.16"
description = "A powerful, modern desktop YouTube downloader with robust anti-bot, subtitle management, and dynamic formatting features."
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
  "yt-dlp[default]>=2025.11.12",
  "requests>=2.32.0",
  "rookiepy>=0.5.6",
  "PySide6>=6.10.0,<6.11",
  "PySide6-Fluent-Widgets>=1.5.0",
  "loguru>=0.7.0",
  "Pillow>=10.0",
  "markdown>=3.5",
  "pywebview>=5.3.0",
  "psutil>=5.9",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = [
  "src/fluentytdl/utils/spatialmedia/**",
  ".venv/**",
  "build/**",
  "dist/**",
  "__pycache__/**",
  ".ruff_cache/**",
  ".pytest_cache/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/fluentytdl/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fluentytdl"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]
exclude = ["src/fluentytdl/utils/spatialmedia", "src/fluentytdl/yt_dlp_plugins_ext", "build/**"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
# Console/launcher entry (optional; used by installers or users)
fluentytdl = "fluentytdl.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.12",
  "pyright>=1.1",
  "pyinstaller>=5.9",
]

[tool.fluentytdl.build]
# 是否默认检查开发环境污染
strict_env_check = true
# 幽灵依赖黑名单（若环境中存在这些库则拒绝打包）
env_blacklist = ["torch", "pandas", "numpy", "jupyter", "scipy", "tensorflow"]
# 默认关闭 UPX 压缩以防杀软误报
enable_upx = false
# 动态排除的 PySide6 臃肿组件
qt_excludes = [
    "PySide6.QtQml",
    "PySide6.QtQuick",
    "PySide6.QtQuickWidgets",
    "PySide6.QtPdf",
    "PySide6.QtPdfWidgets",
    "PySide6.Qt3DCore",
    "PySide6.Qt3DRender",
    "PySide6.QtWebEngine",
    "PySide6.QtWebEngineWidgets",
    "PySide6.QtMultimedia",
    "PySide6.QtBluetooth",
    "PySide6.QtPositioning"
]
