[project]
name = "FluentYTDL"
version = "3.0.22"
description = "Professional YouTube downloader (Stage 1: core architecture)"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp[default]>=2025.11.12",
  "requests>=2.32.0",
  "rookiepy>=0.5.6",
  "PySide6>=6.10.0,<6.11.0",
  "PySide6-Fluent-Widgets>=1.10.0,<1.11.0",
  "loguru>=0.7.0",
  "Pillow>=10.0",
  "markdown>=3.5",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = [
  "src/fluentytdl/utils/spatialmedia/**",
  ".venv/**",
  "build/**",
  "dist/**",
  "__pycache__/**",
  ".ruff_cache/**",
  ".pytest_cache/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/fluentytdl/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fluentytdl"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]
exclude = ["src/fluentytdl/utils/spatialmedia", "build/**"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
# Console/launcher entry (optional; used by installers or users)
fluentytdl = "fluentytdl.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.12",
  "pyright>=1.1",
  "pyinstaller>=5.9",
]

[tool.fluentytdl.build]
# 项目实际使用的 Qt 模块（含 qfluentwidgets / qframelesswindow 依赖）：
#   QtCore, QtGui, QtWidgets, QtNetwork, QtSvg, QtSvgWidgets,
#   QtXml, QtMultimedia, QtMultimediaWidgets, QtPrintSupport
# 以下为确认不需要的模块，通过 PyInstaller Analysis.excludes 排除
qt_excludes = [
    # WebEngine (Chromium) — 单独就占 ~390 MB
    "QtWebEngine",
    "QtWebEngineCore",
    "QtWebEngineWidgets",
    "QtWebChannel",
    # QML / Quick — JavaScript UI 框架
    "QtQuick",
    "QtQuick3D",
    "QtQuickWidgets",
    "QtQml",
    "QtQmlModels",
    # 3D 渲染
    "Qt3DCore",
    "Qt3DRender",
    "Qt3DInput",
    "Qt3DLogic",
    "Qt3DExtras",
    "Qt3DAnimation",
    # PDF
    "QtPdf",
    "QtPdfWidgets",
    # 数据可视化 / 图表
    "QtCharts",
    "QtDataVisualization",
    "QtGraphs",
    # 硬件 / 通信
    "QtBluetooth",
    "QtNfc",
    "QtSerialPort",
    "QtSensors",
    "QtPositioning",
    "QtLocation",
    "QtRemoteObjects",
    # 开发 / 测试工具
    "QtDesigner",
    "QtHelp",
    "QtTest",
    # 其他未使用
    "QtSql",
    "QtOpenGL",
    "QtOpenGLWidgets",
]
# 构建环境黑名单 — 这些包在 venv 中存在时会导致打包膨胀
env_blacklist = ["numpy", "scipy", "pandas", "matplotlib", "torch", "tensorflow"]

